# time_optimal_trajectory_generation_py

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  pyproject.toml  recipe.yaml  setup.py
.github/workflows/: before_all.sh  package.yml  wheels.yaml
cmake/: time_optimal_trajectory_generation-config.cmake.in
examples/: example.py
include/time_optimal_trajectory_generation/: version.hpp
rattler-recipe/: recipe.yaml
src/: time_optimal_trajectory_generation_py.cpp
src/time_optimal_trajectory_generation_py/: __init__.py
