[project]
name = "time-optimal-trajectory-generation-py"
version = "0.1.0"
description = "Time-Optimal Trajectory Generation pybind11 binding"
readme = "README.md"
authors = [
    { name = "JafarAbdi", email = "jafar.uruc@gmail.com" }
]
requires-python = ">=3.10"

[project.scripts]
time-optimal-trajectory-generation-py = "time_optimal_trajectory_generation_py:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "cibuildwheel>=3.0.1",
    "numpy>=2.3.1",
]
